--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,47 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+<div class="mid-container wrapper">
+  <h1 class="title">Create your account</h1>
+  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+    <ul class="fields">
+      <li>
+        <i class="icon-envelope"></i>
+        <%= f.text_field :email, placeholder: "email", autocomplete: "off" %>
+      </li>
+      <li>
+        <i class="icon-user"></i>
+        <%= f.text_field :name, placeholder: "full name", autocomplete: "off" %>
+      </li>
+      <li>
+        <i class="icon-key"></i>
+        <%= f.password_field :password, placeholder: "password", autocomplete: "off" %>
+      </li>
+      <li>
+        <i class="icon-key"></i>
+        <%= f.password_field :password_confirmation, placeholder: "confirm password", autocomplete: "off" %>
+      </li>
+    </ul>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+    <div class="mid-form">
+      <span class="login-checkbox">
+        <%= check_box_tag :agree %>
+        <%= label_tag :agree, "I have read and agree with the Terms of Use." %>
+      </span>
+      <%= f.submit "Sign Up", class: "btn blue large pull-right" %>
+    </div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+    <div class="inset-margin">
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+      <%= link_to "#", class: "btn btn-twitter" do %>
+          <i class="icon-twitter-sign"></i> Login with Twitter
+      <% end %>
+      <%= link_to "#", class: "btn btn-facebook" do %>
+          <i class="icon-facebook-sign"></i> Login with Facebook
+      <% end %>
+    </div>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <div class="mid-footer">
+    Already have an account? <%= link_to 'Login', new_user_session_path %>
+  </div>
+</div>
