--- a/app/views/layouts/petals.html.erb
+++ b/app/views/layouts/petals.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Petals</title>
+  <title>CollabRite</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -59,7 +59,7 @@
 
       <div class="span9 main-left">
         <div class="heading-bar">
-          <h3 class="pull-left">Petals <span class="subheading">(subheading possible)</span></h3>
+          <h2 class="pull-left">Petals - <span class="subheading">Agile Marketing Platform</span></h2>
           <ul class="nav-links pull-right">
             <li><a href="#"><i class="icon-caret-left"></i> back</a></li>
             <li class="divider-vertical"></li>
