Added content_for side navigation

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -11,6 +11,9 @@
     <li>
       <a class="btn green" href="#"><i class="icon-pencil"></i> Edit project</a>
     </li>
+    <li>
+      <a class="btn orange" href="#"><i class="icon-user"></i> Edit project</a>
+    </li>
   </ul>
 
   <div class="codehint">To create this arrow style menu, make a list with class aside-menu</div>
